@@ -2,6 +2,7 @@ FILES
 ChangeLog
 bmake.cat1
 boot-strap
+bsd.after-import.mk
 os.sh
 Makefile.in
 PSD.doc/Makefile
