@@ -1,4 +1,4 @@
-/*	$NetBSD: compat.c,v 1.85 2012/05/15 17:51:51 seanb Exp $	*/
+/*	$NetBSD: compat.c,v 1.86 2012/05/30 21:42:04 sjg Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990 The Regents of the University of California.
@@ -70,14 +70,14 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: compat.c,v 1.85 2012/05/15 17:51:51 seanb Exp $";
+static char rcsid[] = "$NetBSD: compat.c,v 1.86 2012/05/30 21:42:04 sjg Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
 #if 0
 static char sccsid[] = "@(#)compat.c	8.2 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: compat.c,v 1.85 2012/05/15 17:51:51 seanb Exp $");
+__RCSID("$NetBSD: compat.c,v 1.86 2012/05/30 21:42:04 sjg Exp $");
 #endif
 #endif /* not lint */
 #endif
@@ -278,6 +278,12 @@ CompatRunCommand(void *cmdp, void *gnp)
 
     while (isspace((unsigned char)*cmd))
 	cmd++;
+
+    /*
+     * If we did not end up with a command, just skip it.
+     */
+    if (!*cmd)
+	return (0);
 
 #if !defined(MAKE_NATIVE)
     /*
